# ttmsg_controller

./: CMakeLists.txt
include/: app_server.h  common.h  mdl.h  ptp.h  stdnetwork.h
include/ptp/: endian.h
include/rpc/: api.h  common.h  udp.h
lib/: api.c  mdl.c
lib/rpc/: udp.c
lib/unix/: unix.c
scripts/: a.out  build  deploy.py  qemu  test.cpp
src/: server.c
src/app/: main.c
src/ptp/: master.c  slave.c
